--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "archiver": "^2.0.0",
     "body-parser": "^1.17.2",
     "concat-stream": "^1.6.0",
+    "cors": "^2.8.3",
     "express": "^4.15.3",
+    "ffmpeg-change-scene": "github:samuelcalegari/ffmpeg-change-scene",
     "fluent-ffmpeg": "^2.1.2",
     "form-data": "^2.2.0",
     "formidable": "^1.1.1",
@@ -35,7 +37,7 @@
     "zip-folder": "^1.0.0"
   },
   "devDependencies": {
-    "eslint": "^4.1.1",
+    "eslint": "^4.2.0",
     "eslint-plugin-react": "^7.1.0"
   }
 }
